force-app/main/default/objects/Tratamiento_de_profesional__c/Tratamiento_de_profesional__c.object-meta.xml
<CustomObject>
    <label>Tratamiento de profesional</label>
    <nameField>
        <displayFormat>TP-{0000}</displayFormat>
        <label>Número de Tratamiento de profesional</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tratamientos de profesional</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>