force-app/main/default/objects/Tratamiento_de_profesional__c/fields/Nombre_de_Profesional1__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Profesional1__c</fullName>
    <formula>Profesional__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de Profesional</label>
    <type>Text</type>
</CustomField>