force-app/main/default/objects/Tratamiento_de_profesional__c/fields/Profesional_Best_Care__c.field-meta.xml
<CustomField>
    <fullName>Profesional_Best_Care__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profesional Best Care</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>&apos;Profesional Best Care&apos;</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Tratamientos_de_profesional</relationshipName>
    <type>Lookup</type>
</CustomField>