force-app/main/default/objects/Tratamiento_de_profesional__c/fields/Profesional_Derivador__c.field-meta.xml
<CustomField>
    <fullName>Profesional_Derivador__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permite identificar si el profesional seleccionado es Derivador</description>
    <label>Profesional Derivador</label>
    <type>Checkbox</type>
</CustomField>