force-app/main/default/objects/Tratamiento_de_profesional__c/fields/Profesional_nombre__c.field-meta.xml
<CustomField>
    <fullName>Profesional_nombre__c</fullName>
    <formula>Profesional__r.Name</formula>
    <label>Profesional nombre</label>
    <type>Text</type>
</CustomField>