force-app/main/default/objects/Tratamiento_de_profesional__c/fields/Tratamiento__c.field-meta.xml
<CustomField>
    <fullName>Tratamiento__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tratamiento</label>
    <referenceTo>Tratamiento__c</referenceTo>
    <relationshipLabel>Profesionales</relationshipLabel>
    <relationshipName>Tratamientos_de_profesional</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>