force-app/main/default/objects/Tratamiento_de_profesional__c/fields/Visitador_medico_del_profesional__c.field-meta.xml
<CustomField>
    <fullName>Visitador_medico_del_profesional__c</fullName>
    <formula>Profesional__r.Visitador_medico__r.FirstName + &apos; &apos; + Profesional__r.Visitador_medico__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visitador médico del profesional</label>
    <type>Text</type>
</CustomField>